[gd_scene load_steps=9 format=3 uid="uid://ymwlpt7cigxr"]

[ext_resource type="Script" uid="uid://pkbjlgvwgg2c" path="res://characters/enemy_template/enemy.gd" id="1_wqjt8"]
[ext_resource type="PackedScene" uid="uid://cowfiixeikwgc" path="res://characters/templates/character_template.tscn" id="1_y51k7"]
[ext_resource type="PackedScene" uid="uid://21nxqb3lgoxh" path="res://characters/templates/hurtbox.tscn" id="4_gi5ef"]
[ext_resource type="Shader" uid="uid://83s7q3gacun4" path="res://characters/templates/hover.gdshader" id="4_y51k7"]
[ext_resource type="Script" uid="uid://b8da5t11huhiu" path="res://characters/enemy_template/idle.gd" id="5_eujd1"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_y51k7"]
shader = ExtResource("4_y51k7")
shader_parameter/tolerance = 0.1
shader_parameter/prev_color = Color(0.92156863, 0.92941177, 0.9137255, 1)
shader_parameter/new_color = Color(0.92156863, 0.92941177, 0.9137255, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_anbm0"]
radius = 8.062258

[sub_resource type="CircleShape2D" id="CircleShape2D_2fy7w"]
radius = 8.0

[node name="Enemy" instance=ExtResource("1_y51k7")]
script = ExtResource("1_wqjt8")

[node name="Idle" type="Node" parent="StateMachine" index="0"]
script = ExtResource("5_eujd1")
metadata/_custom_type_script = "uid://b3watucd82slh"

[node name="CharacterSprite" parent="CharacterSpriteContainer" index="0"]
material = SubResource("ShaderMaterial_y51k7")
frame = 44

[node name="MouseArea" type="Area2D" parent="." index="2"]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="MouseArea" index="0"]
shape = SubResource("CircleShape2D_anbm0")

[node name="Hurtbox" parent="." index="3" instance=ExtResource("4_gi5ef")]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource("CircleShape2D_2fy7w")

[connection signal="mouse_entered" from="MouseArea" to="." method="_on_mouse_area_mouse_entered"]
[connection signal="mouse_exited" from="MouseArea" to="." method="_on_mouse_area_mouse_exited"]
